# grovr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  grovr.cask.rb  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/commands/: preview.md  release.md
.claude/rules/: react.md  styling.md  tauri.md  testing.md
.claude/skills/bump/: SKILL.md  bump.sh
.claude/skills/release/: SKILL.md  release.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sync-homebrew.yml
e2e/: playwright.config.ts
e2e/fixtures/: tauri.ts
e2e/tests/: app-loading.spec.ts  ide-settings.spec.ts  navigation.spec.ts  settings.spec.ts  theme.spec.ts  worktree-actions.spec.ts  worktree-list.spec.ts
scripts/: preview.sh  run-e2e-tests.sh  setup-test-repo.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  secure_store.rs  types.rs
src-tauri/src/commands/: clipboard.rs  git.rs  integrations.rs  mod.rs  projects.rs  settings.rs
src/components/ui/: alert-modal.tsx  button.tsx  confirm-modal.tsx  modal.tsx  update-badge.tsx  update-dialog.tsx
src/data/: mock.ts
src/hooks/: useKeyboardShortcut.ts
src/lib/: api.ts  deep-link.ts  ide-config.ts  updater.ts
src/pages/: AddProjectPage.tsx  CreateWorktreePage.tsx  EditWorktreePage.tsx  ProjectSettingsPage.tsx  SettingsPage.tsx  WorktreeListPage.tsx
src/pages/settings/: AppearanceSettings.tsx  GeneralSettings.tsx  GitHubSettings.tsx  IDESettings.tsx  JiraSettings.tsx  WorktreeSettings.tsx
src/types/: index.ts
