[package]
name = "grovr"
version = "0.7.1"
description = "Grovr - Git Worktree Manager Desktop App"
authors = ["j1king"]
edition = "2024"

[lib]
name = "grovr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Grovr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Tauri Plugins
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"

# Clipboard (main-thread-safe reading)
arboard = "3"

# Git operations (Phase 4)
git2 = "0.19"

# HTTP client for GitHub/Jira (Phase 5, 6)
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Secure token storage using OS keychain
keyring = "3"

# Window vibrancy
window-vibrancy = "0.5"

# Liquid Glass (macOS 26+)
tauri-plugin-liquid-glass = "0.1"
tauri-plugin-updater = { version = "2.9.0", features = ["rustls-tls"] }
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
smappservice-rs = "0.1"

[dev-dependencies]
tempfile = "3"
